--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-button" type="button">Order Service</button>
       </section>
-      <section class="section-advantages">
+      <section>
         <h2 hidden>our advantages</h2>
         <ul>
           <li>
