--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
       <section class="section-logo">
       <nav>
         <a class="header-logo"
-         href="./index.html"> <span class="accent">Web</span>Studio</a>
+         href="./index.html">Web<span class="accent">Studio</span></a>
         <ul>
-          <li><a class="header-link" href="">Studio</a></li>
+          <li><a class="header-link" href="./index.html">Studio</a></li>
           <li><a class="header-link" href="">Portfolio</a></li>
           <li><a class="header-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul>
           <li><a class="contacts-link" href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
           <li><a class="contacts-link" href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
