--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-button" type="button">Order Service</button>
       </section>
-      <section>
+      <section class="benefit">
         <h2 hidden>our advantages</h2>
-        <ul>
+        <ul class="benefit-list">
           <li>
             <h3 class="benefit-title">Strategy</h3>
             <p class="benefit-text">
@@ -183,7 +183,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"><span class="accent">Web</span>Studio</a>
+      <a class="footer-logo" href="./index.html">Web<span class="accent">Studio</span></a>
       <p class="footer-marketing">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
