--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
       </section>
       <section class="benefit">
         <h2 hidden>our advantages</h2>
-        <ul class="benefit-list">
-          <li>
+        <ul>
+          <li class="benefit-list">
             <h3 class="benefit-title">Strategy</h3>
             <p class="benefit-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="benefit-list">
             <h3 class="benefit-title">Punctuality</h3>
             <p class="benefit-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="benefit-list">
             <h3 class="benefit-title">Diligence</h3>
             <p class="benefit-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="benefit-list">
             <h3 class="benefit-title">Technologies</h3>
             <p class="benefit-text">
               Design practice focused on digital experiences. We bring forth a
