--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <section class="section-team">
         <h2 class="section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="team-list">
             <img
               src="./images/mark.jpg"
               alt="Mark Guerrero"
@@ -84,7 +84,7 @@
             <h3 class="person-name">Mark Guerrero</h3>
             <p class="person-job">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/tom.jpg"
               alt="Tom Ford"
@@ -94,7 +94,7 @@
             <h3 class="person-name">Tom Ford</h3>
             <p class="person-job">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/camila.jpg"
               alt="Camila Garcia"
@@ -104,7 +104,7 @@
             <h3 class="person-name">Camila Garcia</h3>
             <p class="person-job">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/daniel.jpg"
               alt="Daniel Wilson"
