--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   </head>
   <body>
     <header>
-      <section class="section-logo">
-      <nav>
+      <nav class="section-logo">
         <a class="header-logo"
          href="./index.html">Web<span class="accent">Studio</span></a>
         <ul>
@@ -31,7 +30,6 @@
           <li><a class="contacts-link" href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
         </ul>
       </address>
-    </section>
     </header>
     <main>
       <section class="hero-section">
